-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.2, 6.4.0 Beta4
-
a355c9aa33 (qt/qtdeclarative/6.4) 826cf9bb80 (qt/qtdeclarative/dev) 826cf9bb80 (qt/qtdeclarative/wip/material3) a355c9aa33 (qt/tqtc-qtdeclarative/6.4) 826cf9bb80 (qt/tqtc-qtdeclarative/dev)
When trying out qmllint when extending QML with c++, it will fail to recognize the types that have already been exported to qml with QML_ELEMENT.
This can be demonstrated with the 'extending-qml' example, chapter 1. If you run 'ninja all_qmllint' on that it will report this error:
Warning: /Qt/Examples/Qt-6.4.0/qml/tutorials/extending-qml/chapter1-basics/app.qml: QQuickPaintedItem was not found. Did you add all import paths?
Info: Did you mean "PaintedItem"?
Warning: /Qt/Examples/Qt-6.4.0/qml/tutorials/extending-qml/chapter1-basics/app.qml:10:5: 'PieChart' is used but it is not resolved
PieChart {
The same happens for other base classes such as QQuickItem and QAbstractItemModel to name a few.
Note that this happens even if the piechart sources are moved to the qml module, which they currently are not in the bundled example project.
| For Gerrit Dashboard: QTBUG-106602 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 441933,5 | QmlExamples: Add missing dependencies of QtQuick in CMakeLists | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 442005,2 | QmlExamples: Add missing dependencies of QtQuick in CMakeLists | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 442007,2 | QmlExamples: Add missing dependencies of QtQuick in CMakeLists | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |