examples/qml/tutorials/extending-qml/chapter2-methods/piechart.h
@@ -11,8 +11,8 @@ class PieChart : public QQuickPaintedItem
 {
 //![0]
     Q_OBJECT
-    Q_PROPERTY(QString name READ name WRITE setName)
-    Q_PROPERTY(QColor color READ color WRITE setColor)
+    Q_PROPERTY(QString name READ name WRITE setName FINAL)
+    Q_PROPERTY(QColor color READ color WRITE setColor FINAL)
     QML_ELEMENT
 //![1]
 public:
