examples/qml/tutorials/extending-qml/chapter5-listproperties/piechart.h
@@ -11,9 +11,9 @@ class PieSlice;
 class PieChart : public QQuickItem
 {
     Q_OBJECT
-    Q_PROPERTY(QQmlListProperty<PieSlice> slices READ slices)
+    Q_PROPERTY(QQmlListProperty<PieSlice> slices READ slices FINAL)
 //![0]
-    Q_PROPERTY(QString name READ name WRITE setName)
+    Q_PROPERTY(QString name READ name WRITE setName FINAL)
     QML_ELEMENT
 
 //![1]
